# Two-pass-assembler

./: .gitignore  CMakeLists.txt  READ.ME  README.md  analysis.c  analysis.h  assembler.c  file_analyze.c  file_analyze.h  firstAnalysis.c  firstAnalysis.h  firstPass.c  firstPass.h  fsm.c  fsm.h  global.h  input.c  input.h  linkedList.c  linkedList.h  machineWord.c  machineWord.h  main.c  makefile  passOne.c  passOne.h  preAssembler  preAssembler.c  preAssembler.h  second.c  second.h  secondPass.c  secondPass.h  setting.c  setting.h  str_test  str_test.am  test.c  test.sh  textUtils.c  (+8 more)
fileStructures/: analyzer.c  analyzer.h  ast.c  ast.h  codeSeg.c  codeSeg.h  dataSeg.c  dataSeg.h  entryLines.c  entryLines.h  entryTable.c  entryTable.h  externTable.c  externTable.h  externUsages.c  externUsages.h  fileStructures.c  fileStructures.h  memoryImg.c  memoryImg.h  pre_second.c  pre_second.h  symbolTable.c  symbolTable.h
more/: passOne.c  passOne.h  recover.sh  recover_lines
runExamples/errors/firstPassErrors/: expectedOutput.txt  firstPassErrors.as
runExamples/errors/preAssemblerErrors/: 10_too_long_line.as  1_empty_mcr_declaration.as  2_mcr_start_with_non_alphabetic.as  3_mcr_saved_word.as  4_redeclaration_mcr.as  5_extra_txt_after_mcr.as  6_extra_txt_after_endmcr.as  7_unexpected_endmcr.as  8_no_endmcr_before_eof.as  9_nested_macro.as  expectedOutput.txt
runExamples/errors/secondPassErrors/: expectedOutput.txt  secondPassErrors.as
runExamples/errors/warnings/: warning.as
runExamples/noErrors/firstPassTest/: firstPassTest.am  firstPassTest.as  firstPassTest.ent  firstPassTest.ext  firstPassTest.ob
runExamples/noErrors/preAssemblerTest/: preAssemblerTest.am  preAssemblerTest.as  preAssemblerTest.ob
runExamples/noErrors/secondPassTest/: seconPassError.am  seconPassError.as  seconPassError.ent  seconPassError.ext  (+1 more)
testPre/: str_txt
testPre/test1_mcr/: input  input.am
testPre/test2_comments/: expected.as  input  input.am
testPre/test3_emptyLine/: input.am
testPre/test4-5_validMcr/: test5_mcr_savedWord.as
testPre/test4-6_validMcr/: test4_mcr_noName
testers/preAssembler/: 10_too_long_line  tester.sh
testing/: testFirst.sh  testPre.sh
testing/testFirst/: mov_binary  mov_test  str1_tst  str_expected.txt  str_input  str_input.am  str_output  symbols  testFirst.c  testFirst.sh  unresolved_symbols
testing/testPre/: testPre.c
testing/testSecond/: course_test  enter_extern  forword_declaration_test  simple_test
utils/: errors.c  errors.h  linkedList.c  linkedList.h  machineWord.c  machineWord.h  text.c  text.h  vector.c  vector.h
(+52 files in other folders)
